mise en marche du dashboard, fix scrollbar, thousand separator

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,25 @@
 body {
     margin: 0;
 }
+
+$blue: #287bff;
+$blue2: #0062ff;
+
+/****************************************** Scroll Bar *******************************************/
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    background: $blue;
+}
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: $blue2;
+  }
